--- a/tasks/methodOfAdjustment.html
+++ b/tasks/methodOfAdjustment.html
@@ -29,7 +29,7 @@
         type: jsPsychHtmlButtonResponse,
         stimulus: 'Click on the Start button.',
         choices: ['Start'],
-        prompt: "This is a sample program for the jspsych-psychophysics plugin.",
+        prompt: "Press right and left arrow keys to increase or decrease contrat of right stimul. To finish the trial press SPACEBAR.",
     }
 
     const gabor_width_percentage = 10; // Percentage of the viewport width
